feat: implement DOM line chart generator
