# platform/src/apis/Platform.Api.ChartRendering/src/functions/LineChart/dom/route.ts
@@ -1,0 +1,9 @@
+import { app } from "@azure/functions";
+import { lineChartDom } from "./function";
+
+app.http("lineChartDom", {
+  route: "lineChart/dom",
+  methods: ["POST"],
+  authLevel: "admin",
+  handler: lineChartDom,
+});
